--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -121,7 +120,6 @@ button {
   border-radius: 4px;
 }
 
-/* text-align: center; в кнопках за замовчанням*/
 .button.primary {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -145,9 +143,8 @@ button {
   color: var(--logo-color);
 }
 
-.page-header {
-  display: flex;
-  align-items: center;
+.footer-section .accent {
+  color: var(--primary-white-color);
 }
 
 .site-nav {
@@ -176,9 +173,6 @@ button {
   color: var(--accent-color);
 }
 
-/* .site-nav .item + .item {
-  margin-left: 46px;
-} */
 .current {
   position: relative;
 }
@@ -212,9 +206,26 @@ button {
 .contact-info .link:hover, .contact-info .link:focus {
   color: var(--accent-color);
 }
+
+.page-header {
+  display: flex;
+  align-items: center;
+}
+
 .contact-icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+.hero-title {
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .hero {
@@ -230,16 +241,6 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-.hero-title {
-  color: var(--primary-white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 30px;
 }
 
 .feature-list {
@@ -258,6 +259,7 @@ button {
 .feature-list .item {
   width: 270px;
 }
+
 .feature-img-list {
   width: 270px;
   height: 120px;
@@ -269,19 +271,20 @@ button {
   margin-bottom: 30px;
 }
 
-.work {
+.presentation {
   padding-top: 0;
 }
 
-.presentation {
+.presentation-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
-.presentation .item {
+.presentation-list .item {
   width: 370px;
   position: relative;
 }
+
 .presentation-top-text {
   color: var(--primary-white-color);
   background-color: rgba(47, 48, 58, 0.8);
@@ -304,6 +307,7 @@ button {
 .team {
   background-color: var(--primary-bg-color);
 }
+
 .team-title {
   color: var(--title-text-color);
   font-weight: 500;
@@ -315,6 +319,7 @@ button {
   display: flex;
   justify-content: center;
 }
+
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -333,11 +338,13 @@ button {
   width: 270px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
 .team-soc-list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
+
 .team-soc-link {
   width: 44px;
   height: 44px;
@@ -351,18 +358,25 @@ button {
 .team-soc-link:hover, .team-soc-link:focus {
   background-color: var(--accent-color);
 }
-.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
-  fill: var(--primary-white-color);
-}
+
 .team-soc-icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
+  fill: var(--primary-white-color);
 }
 
 .card {
   padding: 30px 10px;
   background-color: var(--primary-white-color);
   border-radius: 0px 0px 4px 4px;
+}
+
+.client-list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
 
 .client-link {
@@ -378,17 +392,13 @@ button {
 .client-link:hover, .client-link:focus {
   border-color: var(--accent-color);
 }
-.client-link:hover .client-soc-icon, .client-link:focus .client-soc-icon {
-  fill: var(--accent-color);
-}
-.client-list {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-}
+
 .client-soc-icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-link:hover .client-soc-icon, .client-link:focus .client-soc-icon {
+  fill: var(--accent-color);
 }
 
 .button.secondary {
@@ -424,6 +434,40 @@ button {
   margin-bottom: 4px;
 }
 
+.product-type {
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.product-border {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+.product-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.product-top-text {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .product {
   display: flex;
   flex-wrap: wrap;
@@ -441,36 +485,6 @@ button {
   position: relative;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.product-type {
-  font-size: 16px;
-  line-height: 1.87;
-}
-.product-border {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-.product-top-wrap {
-  position: relative;
-  overflow: hidden;
-}
-.product-top-text {
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(33, 150, 243, 0.9);
-  padding-top: 63px;
-  padding-left: 24px;
-  padding-right: 24px;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .product .item:hover,
 .product .item:focus {
   cursor: pointer;
@@ -481,26 +495,21 @@ button {
   transform: translateY(0);
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
 .footer-section {
   background-color: var(--secondary-bg-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer-section .accent {
-  color: var(--primary-white-color);
-}
-.footer-subscribe {
-  margin-top: 12px;
-  position: relative;
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
 }
 
 .site-footer {
   margin-top: 20px;
 }
+
 .site-footer .map-link {
   color: var(--primary-white-color);
   text-decoration: none;
@@ -511,6 +520,7 @@ button {
 .site-footer .map-link:hover, .site-footer .map-link:focus {
   color: var(--accent-color);
 }
+
 .site-footer .link {
   color: var(--white-mod);
   text-decoration: none;
@@ -521,12 +531,9 @@ button {
 .site-footer .link:hover, .site-footer .link:focus {
   color: var(--accent-color);
 }
+
 .site-footer .item:not(:last-child) {
   margin-bottom: 9px;
-}
-
-.page-invait {
-  margin-left: 70px;
 }
 
 .section-title-invait {
@@ -543,9 +550,11 @@ button {
   display: flex;
   gap: 10px;
 }
+
 .invait-soc-icon {
   fill: var(--primary-white-color);
 }
+
 .invait-soc-link {
   width: 44px;
   height: 44px;
@@ -560,9 +569,14 @@ button {
   background-color: var(--accent-color);
 }
 
+.page-invait {
+  margin-left: 70px;
+}
+
 .subscribe-form {
   margin-left: auto;
 }
+
 .subscribe-label {
   font-weight: 700;
   font-size: 14px;
@@ -571,6 +585,12 @@ button {
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
+
+.footer-subscribe {
+  margin-top: 12px;
+  position: relative;
+}
+
 .subscribe-input {
   width: 358px;
   height: 50px;
@@ -582,6 +602,9 @@ button {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+}
+.subscribe-input:focus {
+  outline: none;
 }
 .subscribe-input::-moz-placeholder {
   font-size: 16px;
@@ -601,9 +624,7 @@ button {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.subscribe-input:focus {
-  outline: none;
-}
+
 .subscribe-button {
   width: 200px;
   height: 50px;
@@ -618,6 +639,7 @@ button {
   margin-left: 12px;
   padding: 10px 28px;
 }
+
 .subscribe-icon {
   fill: var(--primary-white-color);
   position: absolute;
@@ -663,9 +685,7 @@ button {
   fill: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close-icon:hover,
-.modal-close-icon:focus {
+.modal-close-icon:hover, .modal-close-icon:focus {
   fill: var(--accent-color);
 }
 
@@ -719,14 +739,9 @@ button {
   color: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-input:focus {
   border-color: var(--accent-color);
   outline: none;
-}
-
-.modal-input:focus + .input-icon {
-  fill: var(--accent-color);
 }
 
 .input-icon {
@@ -737,6 +752,9 @@ button {
   fill: var(--title-text-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
 
 .modal-label {
   font-size: 12px;
@@ -744,27 +762,6 @@ button {
   letter-spacing: 0.01em;
   display: block;
   margin-bottom: 4px;
-}
-
-.online-comment::-moz-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.online-comment:-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.online-comment::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
 }
 
 .online-comment {
@@ -781,7 +778,24 @@ button {
   color: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.online-comment::-moz-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.online-comment:-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.online-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .online-comment:focus {
   border-color: var(--accent-color);
   outline: none;
@@ -805,9 +819,7 @@ button {
   color: var(--primary-white-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-button:hover,
-.modal-button:focus {
+.modal-button:hover, .modal-button:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -833,6 +845,9 @@ button {
 .check-icon {
   fill: transparent;
 }
+.modal-check:checked + .check-text .check-icon {
+  fill: var(--primary-white-color);
+}
 
 .modal-check:checked + .check-text .check-box {
   background-color: var(--accent-color);
@@ -840,43 +855,11 @@ button {
   box-shadow: none;
 }
 
-.modal-check:checked + .check-text .check-icon {
-  fill: var(--primary-white-color);
-}
-
 .agree-link {
   color: var(--accent-color);
-  text-decoration: underline;
 }
 
 .modal-fieled.agree {
   display: flex;
   justify-content: center;
-}
-
-/* .check-text::before {
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 1.75px solid #000000;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 2px;
-  margin-right: 8.38px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-check:checked + .check-text::before {
-  background-color: var(--accent-color);
-  border: none;
-  box-shadow: none;
-  background-image: url(../images/check.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-} */
-/* 
-placeholder=""
-.modal-input:not(:focus):not(:placeholder-shown):valid {
-  background-color: rgba(152, 189, 152, 0.25);
-}
-.modal-input:not(:focus):not(:placeholder-shown):invalid {
-  background-color: rgba(224, 133, 133, 0.25);
-} *//*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
