--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,10 +32,10 @@
 .modal-close-icon {
   fill: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-close-icon:hover,
-.modal-close-icon:focus {
-  fill: var(--accent-color);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 .modal-close {
   width: 30px;
@@ -81,13 +81,10 @@
   letter-spacing: 0.01em;
   color: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-.modal-input:focus + .input-icon {
-  fill: var(--accent-color);
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
 }
 .input-icon {
   position: absolute;
@@ -96,6 +93,9 @@
   transform: translateY(-50%);
   fill: var(--title-text-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .modal-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 .modal-label {
   font-size: 12px;
@@ -103,12 +103,6 @@
   letter-spacing: 0.01em;
   display: block;
   margin-bottom: 4px;
-}
-.online-comment::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
 }
 .online-comment {
   width: 100%;
@@ -123,10 +117,16 @@
   margin-bottom: 20px;
   color: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.online-comment:focus {
-  border-color: var(--accent-color);
-  outline: none;
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
 }
 .modal-button {
   position: absolute;
@@ -145,10 +145,10 @@
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-button:hover,
-.modal-button:focus {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
 }
 .check-text {
   font-size: 14px;
@@ -170,46 +170,19 @@
 }
 .check-icon {
   fill: transparent;
+  .modal-check:checked + .check-text & {
+    fill: var(--primary-white-color);
+  }
 }
 .modal-check:checked + .check-text .check-box {
   background-color: var(--accent-color);
   border: none;
   box-shadow: none;
 }
-.modal-check:checked + .check-text .check-icon {
-  fill: var(--primary-white-color);
-}
 .agree-link {
   color: var(--accent-color);
-  text-decoration: underline;
 }
 .modal-fieled.agree {
   display: flex;
   justify-content: center;
 }
-/* .check-text::before {
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 1.75px solid #000000;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 2px;
-  margin-right: 8.38px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-check:checked + .check-text::before {
-  background-color: var(--accent-color);
-  border: none;
-  box-shadow: none;
-  background-image: url(../images/check.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-} */
-/* 
-placeholder=""
-.modal-input:not(:focus):not(:placeholder-shown):valid {
-  background-color: rgba(152, 189, 152, 0.25);
-}
-.modal-input:not(:focus):not(:placeholder-shown):invalid {
-  background-color: rgba(224, 133, 133, 0.25);
-} */ ;
