--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,32 +1,26 @@
-.feature {
-  &-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    .title {
-      color: var(--title-text-color);
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 1.14;
-      margin-top: 0;
-      margin-bottom: 10px;
-    }
-    .item {
-      width: 270px;
-      // margin-right: 30px;
-    }
+.feature-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  .title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    margin-top: 0;
+    margin-bottom: 10px;
   }
-  &-img-list {
+  .item {
     width: 270px;
-    height: 120px;
-    background-color: var(--primary-bg-color);
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
   }
 }
-// .feature-list .item:nth-child(4n) {
-//   margin-right: 0;
-// }
+.feature-img-list {
+  width: 270px;
+  height: 120px;
+  background-color: var(--primary-bg-color);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
