--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,51 +1,39 @@
-.footer {
-  &-container {
-    display: flex;
-    align-items: baseline;
-  }
-  &-section {
-    background-color: var(--secondary-bg-color);
-    padding-top: 60px;
-    padding-bottom: 60px;
-    .accent {
-      color: var(--primary-white-color);
-    }
-  }
-  &-subscribe {
-    margin-top: 12px;
-    position: relative;
-  }
+.footer-section {
+  background-color: var(--secondary-bg-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer-container {
+  display: flex;
+  align-items: baseline;
 }
 .site-footer {
   margin-top: 20px;
-  .map-link {
-    color: var(--primary-white-color);
-    text-decoration: none;
-    font-style: normal;
-    display: block;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
-  }
-  .link {
-    color: var(--white-mod);
-    text-decoration: none;
-    font-style: normal;
-    display: block;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
-  }
-  .item:not(:last-child) {
-    margin-bottom: 9px;
+}
+.site-footer .map-link {
+  color: var(--primary-white-color);
+  text-decoration: none;
+  font-style: normal;
+  display: block;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
   }
 }
-.page-invait {
-  margin-left: 70px;
+.site-footer .link {
+  color: var(--white-mod);
+  text-decoration: none;
+  font-style: normal;
+  display: block;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.site-footer .item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .section-title-invait {
   font-weight: 700;
@@ -56,81 +44,84 @@
   color: var(--primary-white-color);
   margin-bottom: 20px;
 }
-.invait {
-  &-list {
-    display: flex;
-    gap: 10px;
-  }
-  &-soc-icon {
-    fill: var(--primary-white-color);
-  }
-  &-soc-link {
-    width: 44px;
-    height: 44px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      background-color: var(--accent-color);
-    }
+.invait-list {
+  display: flex;
+  gap: 10px;
+}
+.invait-soc-icon {
+  fill: var(--primary-white-color);
+}
+.invait-soc-link {
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
   }
 }
-.subscribe {
-  &-form {
-    margin-left: auto;
+.page-invait {
+  margin-left: 70px;
+}
+.subscribe-form {
+  margin-left: auto;
+}
+.subscribe-label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+}
+.footer-subscribe {
+  margin-top: 12px;
+  position: relative;
+}
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--primary-white-color);
+  background-color: transparent;
+  padding: 16px 15px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  &:focus {
+    outline: none;
   }
-  &-label {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
-  }
-  &-input {
-    width: 358px;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    color: var(--primary-white-color);
-    background-color: transparent;
-    padding: 16px 15px;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-  }
-  &-input::placeholder {
+  &::placeholder {
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
-  &-input:focus {
-    outline: none;
-  }
-  &-button {
-    width: 200px;
-    height: 50px;
-    background: var(--accent-color);
-    border-radius: 4px;
-    color: var(--primary-white-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: left;
-    letter-spacing: 0.06em;
-    margin-left: 12px;
-    padding: 10px 28px;
-  }
-  &-icon {
-    fill: var(--primary-white-color);
-    position: absolute;
-    right: 28px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+}
+.subscribe-button {
+  width: 200px;
+  height: 50px;
+  background: var(--accent-color);
+  border-radius: 4px;
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: left;
+  letter-spacing: 0.06em;
+  margin-left: 12px;
+  padding: 10px 28px;
+}
+.subscribe-icon {
+  fill: var(--primary-white-color);
+  position: absolute;
+  right: 28px;
+  top: 50%;
+  transform: translateY(-50%);
 }
