--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,3 @@
-.page-header {
-  display: flex;
-  align-items: center;
-}
 .site-nav {
   display: flex;
   margin-left: 93px;
@@ -28,9 +24,6 @@
     color: var(--accent-color);
   }
 }
-/* .site-nav .item + .item {
-  margin-left: 46px;
-} */
 .current {
   position: relative;
   &::after {
@@ -44,29 +37,31 @@
     left: 0;
   }
 }
-.contact {
-  &-info {
+.contact-info {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
+  .link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
     display: flex;
-    margin-left: auto;
-    gap: 50px;
-    .link {
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.14;
-      letter-spacing: 0.02em;
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      color: var(--primary-text-color);
-      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-      }
+    align-items: center;
+    color: var(--primary-text-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
     }
   }
-  &-icon {
-    fill: currentColor;
-    margin-right: 10px;
-  }
+}
+.page-header {
+  display: flex;
+  align-items: center;
+}
+.contact-icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
