--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -29,6 +29,36 @@
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
+.product-type {
+  font-size: 16px;
+  line-height: 1.87;
+}
+.product-border {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+.product-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+.product-top-text {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .product {
   display: flex;
   flex-wrap: wrap;
@@ -44,36 +74,6 @@
     margin-bottom: 30px;
     position: relative;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  &-type {
-    font-size: 16px;
-    line-height: 1.87;
-  }
-  &-border {
-    padding: 20px 24px;
-    border-right: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
-    border-left: 1px solid #eeeeee;
-  }
-  &-top-wrap {
-    position: relative;
-    overflow: hidden;
-  }
-  &-top-text {
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    color: var(--primary-white-color);
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(33, 150, 243, 0.9);
-    padding-top: 63px;
-    padding-left: 24px;
-    padding-right: 24px;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .item:hover,
   .item:focus {
