--- a/sass/layouts/_presentation.scss
+++ b/sass/layouts/_presentation.scss
@@ -1,7 +1,7 @@
-.work {
+.presentation {
   padding-top: 0;
 }
-.presentation {
+.presentation-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -9,22 +9,22 @@
     width: 370px;
     position: relative;
   }
-  &-top-text {
-    color: var(--primary-white-color);
-    background-color: rgba(47, 48, 58, 0.8);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 70px;
-  }
+}
+.presentation-top-text {
+  color: var(--primary-white-color);
+  background-color: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70px;
 }
