--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,60 +1,60 @@
 .team {
   background-color: var(--primary-bg-color);
-  &-title {
-    color: var(--title-text-color);
-    font-weight: 500;
+}
+.team-title {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  background-color: var(--primary-white-color);
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  .profession {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     background-color: var(--primary-white-color);
-    margin-bottom: 10px;
     display: flex;
     justify-content: center;
+    margin-bottom: 16px;
   }
-  &-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    .profession {
-      font-size: 16px;
-      line-height: 1.19;
-      text-align: center;
-      background-color: var(--primary-white-color);
-      display: flex;
-      justify-content: center;
-      margin-bottom: 16px;
-    }
-    .item {
-      width: 270px;
-      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    }
+  .item {
+    width: 270px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
-  &-soc-list {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
+}
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.team-soc-link {
+  width: 44px;
+  height: 44px;
+  background-color: var(--primary-white-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
   }
-  &-soc-link {
-    width: 44px;
-    height: 44px;
-    background-color: var(--primary-white-color);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      background-color: var(--accent-color);
-    }
-    &:hover .team-soc-icon,
-    &:focus .team-soc-icon {
-      fill: var(--primary-white-color);
-    }
-  }
-  &-soc-icon {
-    fill: #afb1b8;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-soc-icon {
+  fill: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .team-soc-link:hover &,
+  .team-soc-link:focus & {
+    fill: var(--primary-white-color);
   }
 }
 .card {
